# pydantic-bug-20231103

./: README.md  mvce.py  pyproject.toml
